# snake3

./: .gitignore  config.py  datatypes.py  errors.py  main.py  misc.py  network.py  pyproject.toml  server.py
src/snake3/: misc.py
src/snake3/data/: packet-fields.json
src/snake3/network/: packet.py  types.py
src/snake3/server/: config.py  event.py  logging.py  server.py  socket.py  start.py
